Canvi petit de catala

--- a/Avocados_readme/10.Avocados_del_diablo.md
+++ b/Avocados_readme/10.Avocados_del_diablo.md
@@ -243,7 +243,7 @@ corr_matrix = corr_df.corr()
 # Visualizar la matriz de correlación
 plt.figure(figsize=(10, 6))
 sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f')
-plt.title('Matriz de correlación Total Volume - Calibres')
+plt.title('Matriz de correlación Total Volume - Calibres', fontweight = "bold")
 plt.show()
 
 # Identificar columnas con correlación alta (umbral = 0.8)
@@ -272,6 +272,9 @@ print(f"Variables altamente correlacionadas con otras: {to_drop}")
 fig, ax= plt.subplots(figsize=(20,8))
 ratio_bag=df_avocado_size.groupby('region')[['Volume_Hass_S ratio', 'Volume_Hass_L ratio', 'Volume_Hass_XL ratio']].mean()
 ratio_bag.plot(kind='bar', color=['green', 'orange', 'red'],ax=ax )
+plt.title('Proporcion Calibres Alvocado por region', fontweight = "bold")
+plt.ylabel('Proporcion calibre')
+plt.xlabel('Region')
 plt.show()
 ```
 
@@ -296,6 +299,9 @@ df_baggy['XLarge Bags ratio'] = df_baggy['XLarge Bags'] / df_baggy['Total Bags']
 fig, ax= plt.subplots(figsize=(12,3))
 ratio_bag=df_baggy.groupby('region')[['Small Bags ratio','Large Bags ratio', 'XLarge Bags ratio']].mean()
 ratio_bag.plot(kind='bar', color=['green', 'orange', 'red'],ax=ax )
+plt.title('Proporcion tamaños bolsas por region', fontweight = "bold")
+plt.ylabel('Proporcion Tamaños bolsas')
+plt.xlabel('Region')
 plt.show()
 ```
 
@@ -314,7 +320,7 @@ corr_matrix = corr_df.corr()
 # Visualizar la matriz de correlación
 plt.figure(figsize=(10, 6))
 sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f')
-plt.title('Matriz de Correlación (nlargest(10))')
+plt.title('Matriz de Correlación (nlargest(10))', fontweight = "bold")
 plt.show()
 
 # Identificar columnas con correlación alta (umbral = 0.8)
@@ -355,7 +361,7 @@ corr_matrix = corr_df.corr()
 # Visualizar la matriz de correlación
 plt.figure(figsize=(10, 6))
 sns.heatmap(corr_matrix, annot=True, cmap='coolwarm', fmt='.2f')
-plt.title('Matriz de Correlación (LosAngeles)')
+plt.title('Matriz de Correlación (LosAngeles)', fontweight = "bold")
 plt.show()
 
 # Identificar columnas con correlación alta (umbral = 0.8)
@@ -417,7 +423,7 @@ x_values = df_convencionals['Total Volume']
 y_values = df_convencionals['AveragePrice']
 c_values= list(df_convencionals['region_class'].map(classification_colors))
 plt.scatter(x= x_values, y= y_values, c=c_values, alpha = .5)
-plt.title('Tipo convencionales (log)')
+plt.title('Tipo convencionales (log)', fontweight = "bold")
 plt.xscale('log')
 plt.ylabel('Average price')
 plt.xlabel('Market size')
@@ -431,7 +437,7 @@ x_values = df_organic['Total Volume']
 y_values = df_organic['AveragePrice']
 c_values= list(df_organic['region_class'].map(classification_colors))
 plt.scatter(x= x_values, y= y_values, c=c_values, alpha = .5)
-plt.title('Tipo organicos (log)')
+plt.title('Tipo organicos (log)', fontweight = "bold")
 plt.xscale('log')
 plt.ylabel('Average price')
 plt.xlabel('Market size')
@@ -465,6 +471,7 @@ fig, ax= plt.subplots(figsize=(12,3))
 grouped.plot(kind='bar', color=[color_conv, color_orga])
 plt.xlabel('Año y tipo')
 plt.ylabel('Total Volume')
+plt.title('Volumen ventas total por año y tipo de aguacate', fontweight = "bold")
 plt.xticks(rotation=45, ha='right')
 plt.show()
 ```
@@ -484,7 +491,7 @@ plt.plot(df_grouped, label ='Precio Medio')
 plt.legend(loc='best')
 plt.xlabel('Tiempo')
 plt.ylabel('Precio medio')
-plt.title('Precio medio en el tiempo')
+plt.title('Precio medio en el tiempo', fontweight = "bold")
 plt.grid(True); plt.xticks(rotation=0)
 plt.show()
 
@@ -494,7 +501,7 @@ plt.plot(df_grouped, label='Precio medio mensual') #plt.plot(df_grouped.index, d
 plt.legend(loc='best')
 plt.xlabel('Fecha')
 plt.ylabel('Precio medio')
-plt.title('Precio medio mensual')
+plt.title('Precio medio mensual', fontweight = "bold")
 plt.grid(True); plt.xticks(rotation=0)
 plt.show()
 
@@ -510,7 +517,7 @@ plt.plot(df_grouped_orga, label ='Precio Medio organic', color ='green')
 plt.legend(loc='best')
 plt.xlabel('Tiempo')
 plt.ylabel('Precio medio')
-plt.title('Precio medio en el tiempo segun tipo alvocado')
+plt.title('Precio medio en el tiempo segun tipo alvocado', fontweight = "bold")
 plt.grid(True); plt.xticks(rotation=0)
 plt.show()
 
@@ -523,7 +530,7 @@ plt.show()
     
 
 
-    /tmp/ipykernel_363414/548068968.py:12: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.
+    /tmp/ipykernel_789/2164066208.py:12: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.
       df_grouped = df_cp.groupby(pd.Grouper(key='Date', freq='M'))['AveragePrice'].mean()
 
 
@@ -555,6 +562,9 @@ grouped = df_subset.groupby(['region', 'type'])['Total Volume'].sum()
 fig, ax= plt.subplots(figsize=(20,4))
 grouped.plot(kind='bar', ax=ax, color = [color_conv, color_orga] )
 # plt.ylim(0, 0.3*10**9)
+# plt.yscale('log')
+plt.title('Volumen ventas por region y tipo ', fontweight = "bold")
+plt.ylabel('Volumen ventas')
 plt.grid()
 plt.show()
 ```
@@ -572,6 +582,8 @@ price_group = df_subset.groupby(['region', 'type'])['AveragePrice'].mean()#.nlar
 
 fig, ax= plt.subplots(figsize=(20,4))
 price_group.plot(kind='bar', ax=ax, color = [color_conv, color_orga] )
+plt.title('Precio medio por region y tipo ', fontweight = "bold")
+plt.ylabel('Precio medio')
 # plt.ylim(0, 0.3*10**9)
 plt.grid()
 plt.show()
@@ -588,6 +600,11 @@ Observaciones:
 
 
 ```python
+
+```
+
+
+```python
 df_subset = df_cp
 avocados_region_mean = df_subset.groupby(['region','type'])['AveragePrice'].mean()#.nlargest(6)
 
@@ -595,13 +612,14 @@ total_mean = df_subset['AveragePrice'].mean()
 fig, ax= plt.subplots(figsize=(20,4))
 avocados_relative_mean = (avocados_region_mean - total_mean)*100/total_mean
 avocados_relative_mean.plot(kind = 'bar', ylabel= '% Price deviation', color = [color_conv, color_orga]) # 'slategray', 'forestgreen'])
+plt.title('Desviación del precio respecto la media', fontweight = "bold")
 plt.grid()
 plt.show()
 ```
 
 
     
-![png](output_44_0.png)
+![png](output_45_0.png)
     
 
 
@@ -621,6 +639,10 @@ fig, ax= plt.subplots(figsize=(12,4))
 x_values= unstacked_type['conventional']
 y_values= unstacked_type['Proportion']
 ax.scatter(x=x_values, y= y_values )
+plt.title('Proporcion convencional vs organicos por region', fontweight = "bold")
+plt.ylabel('Proporcion Convencional/Organico')
+plt.xlabel('Volumen Mercado de la region')
+plt.xscale('log')
 # plt.ylim(0, 0.3*10**9)
 plt.grid()
 plt.show()
@@ -628,7 +650,7 @@ plt.show()
 
 
     
-![png](output_46_0.png)
+![png](output_47_0.png)
     
 
 
@@ -644,7 +666,7 @@ df_grouped_organic = df_date_volume[df_cp['type'] =='organic'].groupby('Date').s
 
 # Graficar
 plt.figure(figsize=(12,3))
-plt.title('Volumen total de ventas a lo targo del tiempo')
+plt.title('Volumen total de ventas a lo targo del tiempo', fontweight = "bold")
 plt.plot(df_grouped_conventional, label='Volumen total ventas (conventional)')
 plt.xlabel('Fecha')
 plt.ylabel('Volumen ventas')
@@ -656,7 +678,7 @@ plt.legend(loc='best'); plt.grid(True)
 plt.show()
 
 plt.figure(figsize=(12,3))
-plt.title('Volumen total de ventas a lo targo del tiempo - escala logaritmica')
+plt.title('Volumen total de ventas a lo targo del tiempo - escala logaritmica', fontweight = "bold")
 plt.plot(df_grouped_conventional, label='Volumen total ventas (conventional) escala logaritmica')
 plt.xlabel('Fecha')
 plt.ylabel('Volumen ventas')
@@ -672,13 +694,13 @@ plt.show()
 
 
     
-![png](output_48_0.png)
+![png](output_49_0.png)
     
 
 
 
     
-![png](output_48_1.png)
+![png](output_49_1.png)
     
 
 
@@ -696,7 +718,7 @@ plt.figure(figsize=(10, 2))
 df_year_price.plot.bar(label ='Precio medio', color = color_total, alpha=1) # x='aaa??',y='bbb??',
 plt.xlabel('Año')
 plt.ylabel('Precio medio')
-plt.title('Precio medio anual')
+plt.title('Precio medio anual', fontweight = "bold")
 plt.legend(loc='lower right'); plt.grid(True)
 plt.xticks(rotation=0)
 plt.show()
@@ -708,7 +730,7 @@ df_year_price_conventional.plot.bar(label ='Precio medio alvocado conventional',
 #df_year_price.plot.bar(label ='Precio medio', color ='blue', alpha=0.2) # x='aaa??',y='bbb??',
 plt.xlabel('Año')
 plt.ylabel('Precio medio')
-plt.title('Precio medio anual')
+plt.title('Precio medio anual', fontweight = "bold")
 plt.legend(loc='lower right'); plt.grid(True)
 plt.xticks(rotation=0)
 plt.show()
@@ -725,23 +747,20 @@ plt.show()
 
 
     
-![png](output_50_1.png)
+![png](output_51_1.png)
     
 
 
 
     
-![png](output_50_2.png)
+![png](output_51_2.png)
     
 
-
-##### Representación de ventas totales sobre precio promedio ( por regiones o no )
 
 ##### Analisis de Series Temporales y Ruido asociado
 
 Observaciones:
-
-    TODO: Perido de 52 semanas para ver la evolucion a la lo largo de los 3 años ?
+    * Perido de 52 semanas para ver la evolucion a la lo largo de los 3 años.
 
 
 ```python
@@ -757,20 +776,28 @@ df_decomp = seasonal_decompose(df_grouped, model='additive', period=(int)(52*1))
 plt.figure(figsize=(10, 2))
 plt.plot(df_decomp.observed, label='avocado convencional')
 plt.legend(loc='best');plt.grid(True)
-#plt.title('Tendencia')
+plt.title('Tendencia', fontweight = "bold")
+plt.ylabel('Precio')
+plt.xlabel('Fecha')
 plt.tight_layout()
 plt.show()
 
 plt.figure(figsize=(10, 2))
 plt.plot(df_decomp.trend, color='red', label='Tendencia mensual')
+plt.title('Tendencia mensual', fontweight = "bold")
 plt.legend(loc='best');plt.grid(True)
+plt.xlabel('Fecha')
+plt.ylabel('Precio')
 #plt.title('Tendencia')
 plt.tight_layout()
 plt.show()
 
 plt.figure(figsize=(10, 2))
 plt.plot(df_decomp.seasonal, label='Estacionalidad')
+plt.title('Estacionalidad', fontweight = "bold")
+plt.ylabel('Precio')
 plt.legend(loc='best');plt.grid(True)
+plt.xlabel('Fecha')
 #plt.title('Estacionalidad')
 plt.tight_layout()
 plt.show()
@@ -778,6 +805,9 @@ plt.show()
 plt.figure(figsize=(10, 2))
 plt.plot(df_decomp.resid, color='green', label='Residuo')
 plt.legend(loc='best');plt.grid(True)
+plt.xlabel('Fecha')
+plt.ylabel('Precio')
+plt.title('Residuo', fontweight = "bold")
 #plt.title('Residuo')
 plt.tight_layout()
 plt.show()
@@ -788,25 +818,25 @@ plt.show()
 
 
     
-![png](output_52_1.png)
+![png](output_53_1.png)
     
 
 
 
     
-![png](output_52_2.png)
+![png](output_53_2.png)
     
 
 
 
     
-![png](output_52_3.png)
+![png](output_53_3.png)
     
 
 
 
     
-![png](output_52_4.png)
+![png](output_53_4.png)
     
 
 
@@ -834,9 +864,9 @@ c_values= list(df_regions['region'].map(great_reg_col))
 
 plt.scatter(x= x_values, y= y_values, c=c_values, alpha = 1)
 plt.yscale('log')
-plt.title('Total Volume en el tiempo (log)')
+plt.title('Total Volume en el tiempo (log)', fontweight = "bold")
 plt.ylabel('Total Volume')
-#plt.xlabel('Date')
+plt.xlabel('Fecha')
 #plt.legend() #loc='lower right')
 legend_handles = [plt.Line2D([0], [0], marker='o', color='w', label=region, markerfacecolor=color, markersize=8) for region, color in great_reg_col.items() if region in df_regions['region'].unique()]
 plt.legend(handles=legend_handles, loc='best', bbox_to_anchor=(1, 1), ncol=1)
@@ -846,7 +876,7 @@ plt.show()
 
 
     
-![png](output_54_0.png)
+![png](output_55_0.png)
     
 
 
@@ -861,9 +891,9 @@ c_values= list(df_regions['region'].map(great_reg_col))
 
 plt.scatter(x= x_values, y= y_values, c=c_values, alpha = 1)
 #plt.yscale('log')
-plt.title('Precio medio en el tiempo')
+plt.title('Precio medio en el tiempo', fontweight = "bold")
 plt.ylabel('AveragePrice')
-#plt.xlabel('Date')
+plt.xlabel('Fecha')
 legend_handles = [plt.Line2D([0], [0], marker='o', color='w', label=region, markerfacecolor=color, markersize=8) for region, color in great_reg_col.items() if region in df_regions['region'].unique()]
 plt.legend(handles=legend_handles, loc='best', bbox_to_anchor=(1, 1), ncol=1)
 plt.grid()
@@ -872,7 +902,7 @@ plt.show()
 
 
     
-![png](output_56_0.png)
+![png](output_57_0.png)
     
 
 
@@ -888,6 +918,7 @@ convencional_region_mean = df_convencionals.groupby('region')['AveragePrice'].me
 coloring=convencional_region_mean.index.map(av.region_classification).map(av.classification_colors)
 total_mean = df_convencionals['AveragePrice'].mean()
 fig, ax= plt.subplots(figsize=(20,4))
+plt.title('Desviación del precio respecto la media', fontweight = "bold")
 avocados_relative_mean = ((convencional_region_mean - total_mean)*100/total_mean)
 avocados_relative_mean.plot(kind = 'bar', ylabel= '% Price deviation')#, color= coloring)#, color= convencional_region_mean.index.map(classification_colors))
 plt.grid()
@@ -896,33 +927,7 @@ plt.show()
 
 
     
-![png](output_58_0.png)
-    
-
-
-* TODO 
-
-
-```python
-convencional_region_mean_total = df_convencionals.groupby('region').agg({'Total Volume':'mean', 'AveragePrice':'mean'})#.nlargest(6)
-convencional_region_mean_total['region_class'] = convencional_region_mean_total.index.map(av.region_classification)
-classification_colors = {'City':'green' ,'Region':'yellow' ,'GreaterRegion':'orange', 'State':'red'}
-fig, ax= plt.subplots(figsize=(20,4))
-x_values = convencional_region_mean_total['Total Volume']
-total_mean = df_convencionals['AveragePrice'].mean()
-y_values = (convencional_region_mean_total['AveragePrice'] - total_mean)*100/total_mean
-c_values= convencional_region_mean_total['region_class'].map(classification_colors)
-
-plt.scatter(x= x_values, y= y_values)
-plt.ylabel('% Average price deviation')
-plt.xlabel('Market size')
-plt.grid()
-plt.show()
-```
-
-
-    
-![png](output_60_0.png)
+![png](output_59_0.png)
     
 
 
@@ -944,8 +949,9 @@ c_values= list(convencional_region_mean_total['region_class'].map(av.classificat
 fig, ax= plt.subplots(figsize=(12,6))
 plt.scatter(x= x_values, y= y_values, c=c_values)
 plt.xscale('log')
+plt.title('% Desviación de precio medio Convencional por region', fontweight = "bold")
 plt.ylabel('% Average price deviation')
-plt.xlabel('Market size')
+plt.xlabel('Volúmen de mercado de la region')
 legend_patches = [mpatches.Patch(color=color, label=region) for region, color in av.classification_colors.items()]
 plt.legend(handles=legend_patches, loc='best', bbox_to_anchor=(1, 1), ncol=1)
 plt.grid()
@@ -954,7 +960,7 @@ plt.show()
 
 
     
-![png](output_62_0.png)
+![png](output_61_0.png)
     
 
 
@@ -976,15 +982,16 @@ y_values = (new_convencional_region_mean_total['AveragePrice'] - total_mean)*100
 c_values= new_convencional_region_mean_total['type'].map(type_coloring)
 
 plt.scatter(x= x_values, y= y_values, c=c_values)
+plt.title('% Desviación de precio medio por region y tipo', fontweight = "bold")
 plt.ylabel('% Average price deviation')
-plt.xlabel('Market size')
+plt.xlabel('Volúmen de mercado de la region')
 plt.grid()
 plt.show()
 ```
 
 
     
-![png](output_63_0.png)
+![png](output_62_0.png)
     
 
 
@@ -1003,7 +1010,7 @@ plt.figure(figsize=(14, 8))
 sns.barplot(data=volume_by_region, x='region', y='Total Volume', hue='region', palette='viridis')
 plt.xticks(rotation=90)
 # Añadir título y etiquetas a los ejes
-plt.title('Suma del Volumen Total de Ventas por Región excepto TotalUS')
+plt.title('Suma del Volumen Total de Ventas por Región excepto TotalUS', fontweight = "bold")
 plt.xlabel('Región')
 plt.ylabel('Volumen Total de Ventas')
 #plt.yscale('log')
@@ -1015,7 +1022,7 @@ sns.reset_defaults()
 
 
     
-![png](output_66_0.png)
+![png](output_65_0.png)
     
 
 
@@ -1032,13 +1039,13 @@ sns.set_style('whitegrid')
 sns.violinplot(x='region',y='Total Volume', data=df_cp_GreaterRegion)
 plt.xlabel('Region',{'fontsize' : 'large'})
 plt.ylabel('Total Volume',{'fontsize':'large'})
-plt.title("Total Volume en las grandes regiones excepto TotalUS",{'fontsize':10})
+plt.title("Total Volume en las grandes regiones excepto TotalUS",{'fontsize':10}, fontweight = "bold")
 plt.show()
 ```
 
 
     
-![png](output_67_0.png)
+![png](output_66_0.png)
     
 
 
@@ -1050,13 +1057,13 @@ sns.set_style('whitegrid')
 sns.violinplot(x='region',y='Total Volume', data=df_cp_TotalUS)
 plt.xlabel('Region',{'fontsize' : 'large'})
 plt.ylabel('Total Volume',{'fontsize':'large'})
-plt.title("Total Volume de TotalUS",{'fontsize':10})
+plt.title("Total Volume de TotalUS",{'fontsize':10}, fontweight = "bold")
 plt.show()
 ```
 
 
     
-![png](output_68_0.png)
+![png](output_67_0.png)
     
 
 
@@ -1070,13 +1077,13 @@ sns.set_style('whitegrid')
 sns.violinplot(x='region',y='Total Volume', data=df_cp_GreaterRegion_conv)
 plt.xlabel('Region',{'fontsize' : 'large'})
 plt.ylabel('Total Volume',{'fontsize':'large'})
-plt.title("Total Volume de aguacate convencional",{'fontsize':10})
+plt.title("Total Volume de aguacate convencional",{'fontsize':10}, fontweight = "bold")
 plt.show()
 ```
 
 
     
-![png](output_70_0.png)
+![png](output_69_0.png)
     
 
 
@@ -1087,13 +1094,13 @@ sns.set_style('whitegrid')
 sns.violinplot(x='region',y='Total Volume', data=df_cp_GreaterRegion_org)
 plt.xlabel('Region',{'fontsize' : 'large'})
 plt.ylabel('Total Volume',{'fontsize':'large'})
-plt.title("Total Volume de aguacate orgánico",{'fontsize':10})
+plt.title("Total Volume de aguacate orgánico",{'fontsize':10}, fontweight = "bold")
 plt.show()
 ```
 
 
     
-![png](output_71_0.png)
+![png](output_70_0.png)
     
 
 
@@ -1104,7 +1111,7 @@ plt.show()
 df_cp_cleaned = df_cp[df_cp['region_class'] !='TotalUS'].copy()
 plt.figure(figsize=(12,4))
 sns.boxplot(df_cp_cleaned, x="year", y="AveragePrice", hue='type', fill=False, gap=0.5)
-plt.title("Average Price por año y tipo") #,{'fontsize':40})
+plt.title("Average Price por año y tipo", fontweight = "bold") #,{'fontsize':40})
 plt.xlabel('Año') #,{'fontsize' : 30})
 plt.ylabel('Precio medio') #,{'fontsize':'large'})
 plt.grid()
@@ -1114,7 +1121,7 @@ sns.reset_defaults()
 
 
     
-![png](output_73_0.png)
+![png](output_72_0.png)
     
 
 
@@ -1125,7 +1132,7 @@ sns.reset_defaults()
 
 ```python
 plt.figure(figsize=(12, 6))
-plt.title('Distribución de AveragePrice en Grandes Regiones y por año',{'fontsize':10})
+plt.title('Distribución de AveragePrice en Grandes Regiones y por año',{'fontsize':10}, fontweight = "bold")
 plt.xlabel('Año')
 plt.ylabel('Average Price')
 sns.boxplot(data=df_cp_GreaterRegion, x='year', y='AveragePrice', hue='year', palette='Pastel1', notch=True)
@@ -1136,7 +1143,7 @@ plt.show()
 
 
     
-![png](output_75_0.png)
+![png](output_74_0.png)
     
 
 
@@ -1149,7 +1156,7 @@ plt.figure(figsize=(12,6))
 
 plt.xlabel('Año',{'fontsize' : 'large'})
 plt.ylabel('Region',{'fontsize':'large'})
-plt.title(" Distribución Average Price convencional por año en Grandes Regiones",{'fontsize':10})
+plt.title(" Distribución Average Price convencional por año en Grandes Regiones",{'fontsize':10}, fontweight = "bold")
 sns.stripplot(data=df_cp_GreaterRegion_conv, x='year', y='AveragePrice',alpha=0.3)
 sns.boxplot(data=df_cp_GreaterRegion_conv, x='year', y='AveragePrice', hue='year', palette='Pastel1', notch=True)
 plt.show()
@@ -1158,7 +1165,7 @@ plt.show()
 
 
     
-![png](output_77_0.png)
+![png](output_76_0.png)
     
 
 
@@ -1168,14 +1175,14 @@ plt.figure(figsize=(12,6))
 sns.boxplot(data=df_cp_GreaterRegion_org, x='year', y='AveragePrice', hue='year', palette='Pastel1', notch=True)
 plt.xlabel('Año',{'fontsize' : 'large'})
 plt.ylabel('Region',{'fontsize':'large'})
-plt.title("Distribución Average Price organico por año en Grandes Regiones",{'fontsize':10})
+plt.title("Distribución Average Price organico por año en Grandes Regiones",{'fontsize':10}, fontweight = "bold")
 sns.stripplot(data=df_cp_GreaterRegion_org, x='year', y='AveragePrice',alpha=0.3)
 plt.show()
 ```
 
 
     
-![png](output_78_0.png)
+![png](output_77_0.png)
     
 
 
@@ -1189,7 +1196,7 @@ df_filtrado = df_cp_organic[df_cp_organic['region'].isin(regiones)]
 
 plt.figure(figsize=(20,4))
 sns.boxplot(df_filtrado, x="year", y="AveragePrice", hue="region", dodge=True, fill=False, gap=.2)
-plt.title("Average Price Organico por año y region",{'fontsize':20})
+plt.title("Average Price Organico por año y region",{'fontsize':20}, fontweight = "bold")
 plt.xlabel('Año')#,{'fontsize' : 'large'})
 plt.ylabel('Region')#,{'fontsize':'large'})
 plt.legend(loc='best') #, bbox_to_anchor=(1, 1), ncol=1)
@@ -1198,7 +1205,7 @@ plt.show()
 
 
     
-![png](output_79_0.png)
+![png](output_78_0.png)
     
 
 
@@ -1211,14 +1218,16 @@ y=df_cp.groupby(['year'])['AveragePrice'].mean()
 x=(df_cp['year'].unique())
 plt.figure(figsize=(10, 6))
 plt.plot(x, y)
-plt.title('Precios Promedios por Año')
+plt.title('Precios Promedios por Año', fontweight = "bold")
+plt.ylabel('Precio promedio')
+plt.xlabel('Año')
 plt.grid()
 plt.show()
 ```
 
 
     
-![png](output_81_0.png)
+![png](output_80_0.png)
     
 
 
@@ -1232,7 +1241,7 @@ print(f"AveragePrice: min: {df_cp['AveragePrice'].min()} max: {df_cp['AveragePri
 
 plt.figure(figsize=(10, 6))
 sns.histplot(average_prices, bins=100, kde=True, color='skyblue')
-plt.title('Histogram of Average Avocado Prices')
+plt.title('Histogram of Average Avocado Prices', fontweight = "bold")
 plt.xlabel('Average Price')
 plt.ylabel('Frequency')
 plt.grid()
@@ -1244,7 +1253,7 @@ plt.show()
 
 
     
-![png](output_83_1.png)
+![png](output_82_1.png)
     
 
 
@@ -1262,7 +1271,7 @@ plt.hist(
 )
 
 # Add titles and labels
-plt.title("Histogram of Average Avocado Prices by Type")
+plt.title("Histogram of Average Avocado Prices by Type", fontweight = "bold")
 plt.xlabel("Average Price")
 plt.ylabel("Frequency")
 plt.legend(loc='upper right')
@@ -1278,7 +1287,7 @@ plt.show()
 
 
     
-![png](output_84_1.png)
+![png](output_83_1.png)
     
 
 
@@ -1296,7 +1305,7 @@ plt.show()
 
 
     
-![png](output_85_0.png)
+![png](output_84_0.png)
     
 
 
@@ -1314,7 +1323,7 @@ plt.show()
 
 
     
-![png](output_86_0.png)
+![png](output_85_0.png)
     
 
 
@@ -1363,13 +1372,13 @@ plt.show()
 
 
     
-![png](output_89_0.png)
+![png](output_88_0.png)
     
 
 
 
     
-![png](output_89_1.png)
+![png](output_88_1.png)
     
 
 
@@ -1396,13 +1405,13 @@ plt.show()
 
 
     
-![png](output_90_0.png)
+![png](output_89_0.png)
     
 
 
 
     
-![png](output_90_1.png)
+![png](output_89_1.png)
     
 
 
@@ -1444,13 +1453,13 @@ plt.show()
 
 
     
-![png](output_92_0.png)
+![png](output_91_0.png)
     
 
 
 
     
-![png](output_92_1.png)
+![png](output_91_1.png)
     
 
 
@@ -1476,6 +1485,7 @@ y_values = convencional_region_mean_total['Price difference'] #(new_convencional
 # c_values= convencional_region_mean_total['type'].map(type_coloring)
 
 plt.scatter(x= x_values, y= y_values)#, c=c_values)
+plt.title('Impacto del precio en las ventas')
 plt.ylabel('Price difference organic vs conventional')
 plt.xlabel('Market size')
 plt.grid()
@@ -1484,7 +1494,7 @@ plt.show()
 
 
     
-![png](output_94_0.png)
+![png](output_93_0.png)
     
 
 
@@ -1520,7 +1530,7 @@ plt.show()
 
 
     
-![png](output_96_0.png)
+![png](output_95_0.png)
     
 
 
@@ -1552,7 +1562,7 @@ plt.show()
 
 
     
-![png](output_98_0.png)
+![png](output_97_0.png)
     
 
 
@@ -1585,7 +1595,7 @@ plt.show()
 
 
     
-![png](output_100_0.png)
+![png](output_99_0.png)
     
 
 
@@ -1637,7 +1647,7 @@ plt.show()
 
 
     
-![png](output_105_0.png)
+![png](output_104_0.png)
     
 
 
@@ -1663,7 +1673,7 @@ plt.show()
 
 
     
-![png](output_106_0.png)
+![png](output_105_0.png)
     
 
 
@@ -1687,7 +1697,7 @@ plt.show()
 
 
     
-![png](output_107_0.png)
+![png](output_106_0.png)
     
 
 
@@ -1721,7 +1731,7 @@ plt.show()
 
 
     
-![png](output_109_0.png)
+![png](output_108_0.png)
     
 
 
@@ -1756,7 +1766,7 @@ plt.show()
 
 
     
-![png](output_110_0.png)
+![png](output_109_0.png)
     
 
 
@@ -1799,7 +1809,7 @@ plt.show()
 
 
     
-![png](output_113_0.png)
+![png](output_112_0.png)
     
 
 
@@ -1833,7 +1843,7 @@ plt.show()
 
 
     
-![png](output_114_0.png)
+![png](output_113_0.png)
     
 
 
@@ -1875,7 +1885,7 @@ plt.show()
 
 
     
-![png](output_115_0.png)
+![png](output_114_0.png)
     
 
 
@@ -2030,7 +2040,7 @@ plt.show()
 
 
     
-![png](output_122_0.png)
+![png](output_121_0.png)
     
 
 
@@ -2098,13 +2108,13 @@ plt.show()
 
 
     
-![png](output_124_0.png)
+![png](output_123_0.png)
     
 
 
 
     
-![png](output_124_1.png)
+![png](output_123_1.png)
     
 
 
@@ -2157,7 +2167,7 @@ plt.show()
 
 
     
-![png](output_125_0.png)
+![png](output_124_0.png)
     
 
 
@@ -2205,7 +2215,7 @@ plt.show()
 
 
     
-![png](output_126_0.png)
+![png](output_125_0.png)
     
 
 
@@ -2578,7 +2588,7 @@ plt.show()
 
 
     
-![png](output_129_2.png)
+![png](output_128_2.png)
     
 
 
@@ -2877,7 +2887,7 @@ plt.show()
 
 
     
-![png](output_130_2.png)
+![png](output_129_2.png)
     
 
 
@@ -2918,7 +2928,7 @@ plt.show()
 
 
     
-![png](output_133_0.png)
+![png](output_132_0.png)
     
 
 
@@ -2939,7 +2949,7 @@ plt.show()
 
 
     
-![png](output_134_0.png)
+![png](output_133_0.png)
     
 
 
@@ -3009,7 +3019,7 @@ plt.show()
 
 
     
-![png](output_140_0.png)
+![png](output_139_0.png)
     
 
 
@@ -3029,13 +3039,13 @@ plt.show()
 
 
     
-![png](output_142_0.png)
+![png](output_141_0.png)
     
 
 
 
     
-![png](output_142_1.png)
+![png](output_141_1.png)
     
 
 
@@ -3062,7 +3072,7 @@ plt.show()
 
 
     
-![png](output_144_0.png)
+![png](output_143_0.png)
     
 
 
@@ -3082,7 +3092,7 @@ plt.show()
 
 
     
-![png](output_145_0.png)
+![png](output_144_0.png)
     
 
 
@@ -3102,7 +3112,7 @@ plt.show()
 
 
     
-![png](output_146_0.png)
+![png](output_145_0.png)
     
 
 
@@ -3128,7 +3138,7 @@ plt.show()
 
 
     
-![png](output_148_0.png)
+![png](output_147_0.png)
     
 
 
@@ -3152,7 +3162,7 @@ plt.show()
 
 
     
-![png](output_149_0.png)
+![png](output_148_0.png)
     
 
 
@@ -3178,7 +3188,7 @@ plt.show()
 
 
     
-![png](output_151_0.png)
+![png](output_150_0.png)
     
 
 
@@ -3212,7 +3222,7 @@ print(f"Variables altamente correlacionadas con otras: {to_drop}")
 
 
     
-![png](output_153_0.png)
+![png](output_152_0.png)
     
 
 
@@ -3442,7 +3452,7 @@ plt.show()
 
 
     
-![png](output_158_0.png)
+![png](output_157_0.png)
     
 
 
@@ -3485,7 +3495,7 @@ plt.show()
 
 
     
-![png](output_159_0.png)
+![png](output_158_0.png)
     
 
 
@@ -3495,7 +3505,7 @@ plt.show()
 
 
     
-![png](output_159_2.png)
+![png](output_158_2.png)
     
 
 
@@ -3537,7 +3547,7 @@ plt.show()
 
 
     
-![png](output_160_0.png)
+![png](output_159_0.png)
     
 
 
@@ -3547,7 +3557,7 @@ plt.show()
 
 
     
-![png](output_160_2.png)
+![png](output_159_2.png)
     
 
 
@@ -3950,18 +3960,56 @@ plt.show()
 # print(X_train, y_pred_poly_train)
 ```
 
+    X_poly: 270 [[ 1.00000000e+00  6.03638388e-01  2.01500000e+03 ...  0.00000000e+00
+       0.00000000e+00  0.00000000e+00]
+     [ 1.00000000e+00 -9.78558644e-01  2.01600000e+03 ...  2.20900000e+03
+       4.70000000e+01  1.00000000e+00]
+     [ 1.00000000e+00  9.72191719e-01  2.01700000e+03 ...  0.00000000e+00
+       0.00000000e+00  0.00000000e+00]
+     ...
+     [ 1.00000000e+00  5.75595866e-01  2.01700000e+03 ...  0.00000000e+00
+       0.00000000e+00  0.00000000e+00]
+     [ 1.00000000e+00 -9.71582571e-01  2.01600000e+03 ...  4.00000000e+00
+       2.00000000e+00  1.00000000e+00]
+     [ 1.00000000e+00  1.35626648e+00  2.01600000e+03 ...  0.00000000e+00
+       0.00000000e+00  0.00000000e+00]]
+    
+    Comparación de los primeros 10 valores entre el valor predicho y el valor real:
+        Valor Real  Valor Predicho  Error Porcentual
+    0        1.04        1.139885         -9.604288
+    1        1.41        1.438219         -2.001369
+    2        1.83        1.799041          1.691744
+    3        1.01        0.940126          6.918212
+    4        1.37        1.346056          1.747743
+    5        1.53        1.528976          0.066899
+    6        0.99        0.911013          7.978496
+    7        1.39        1.349376          2.922580
+    8        1.43        1.422922          0.494951
+    9        0.98        0.904683          7.685384
+    
+    Error cuadrático medio (MSE) del modelo: 0.0073
+    El coeficiente Standard Volume	 	: -157909.33551370245
+    El coeficiente year	 	: 119074.52579389374
+    El coeficiente n_week	 	: -532309.8827663932
+    El coeficiente type_Bool	 	: -6858.844755373939
+    
+    Valor R² del modelo: 0.947217
+    
+    La diferencia entre los Valores R² del modelo: 0.010426
 
-    ---------------------------------------------------------------------------
 
-    ModuleNotFoundError                       Traceback (most recent call last)
+    /tmp/ipykernel_789/2346379670.py:87: SettingWithCopyWarning: 
+    A value is trying to be set on a copy of a slice from a DataFrame.
+    Try using .loc[row_indexer,col_indexer] = value instead
+    
+    See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy
+      X_to_plot.loc[:,'Date'] = X_to_plot.apply(lambda x: datetime.datetime.strptime(str(int(x['year'])) +'-W'+ str(int(x['n_week'])) + '-1', "%Y-W%W-%w"), axis=1)
 
-    Cell In[98], line 1
-    ----> 1 from sklearn import preprocessing
-          2 from sklearn.model_selection import train_test_split
-          3 from sklearn.linear_model import LinearRegression
 
 
-    ModuleNotFoundError: No module named 'sklearn'
+    
+![png](output_164_2.png)
+    
 
 
 ## Comparación de módelos
@@ -4094,6 +4142,39 @@ best_regions = Resultados_df.groupby('Region')['R_2'].max()
 display(Resultados_df[Resultados_df['Region'] == 'California'].sort_values(by = 'R_2', ascending = False))
 ```
 
+
+<div>
+<style scoped>
+    .dataframe tbody tr th:only-of-type {
+        vertical-align: middle;
+    }
+
+    .dataframe tbody tr th {
+        vertical-align: top;
+    }
+
+    .dataframe thead th {
+        text-align: right;
+    }
+</style>
+<table border="1" class="dataframe">
+  <thead>
+    <tr style="text-align: right;">
+      <th></th>
+      <th>Unnamed: 0</th>
+      <th>Region</th>
+      <th>Variables</th>
+      <th>R_2</th>
+      <th>Var_R</th>
+      <th>Random_seed</th>
+    </tr>
+  </thead>
+  <tbody>
+  </tbody>
+</table>
+</div>
+
+
 ## Modelo de predicción
 
 ### Inicializacion
@@ -4188,6 +4269,12 @@ print(f"\nLa diferencia entre los Valores R² del modelo: {r2_train- r2_test:.6f
 
 ```
 
+    
+    Valor R² del modelo: 0.967640
+    
+    La diferencia entre los Valores R² del modelo: -0.007140
+
+
 ### Visualización modelo total Volume
 
 * En este apartado visualizaremos lso resultados del modelo de total Volume. En este caso como las variables independientes son únicamente temporales es muy dificil poder obtener un valor suficientemente certero. Aun asi esta estimación sera suficiente por el momento.
@@ -4214,6 +4301,20 @@ plt.grid()
 plt.legend()
 plt.show()
 ```
+
+    /tmp/ipykernel_789/2484599523.py:7: SettingWithCopyWarning: 
+    A value is trying to be set on a copy of a slice from a DataFrame.
+    Try using .loc[row_indexer,col_indexer] = value instead
+    
+    See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy
+      X_to_plot.loc[:,'Date'] = X_to_plot.apply(lambda x: datetime.datetime.strptime(str(int(x['year'])) +'-W'+ str(int(x['n_week'])) + '-1', "%Y-W%W-%w"), axis=1)
+
+
+
+    
+![png](output_178_1.png)
+    
+
 
 ### Prediccion Total Volume
 
@@ -4278,6 +4379,20 @@ plt.legend()
 plt.show()
 
 ```
+
+    /tmp/ipykernel_789/1056579679.py:8: SettingWithCopyWarning: 
+    A value is trying to be set on a copy of a slice from a DataFrame.
+    Try using .loc[row_indexer,col_indexer] = value instead
+    
+    See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy
+      X_to_plot.loc[:,'Date'] = X_to_plot.apply(lambda x: datetime.datetime.strptime(str(int(x['year'])) +'-W'+ str(int(x['n_week'])) + '-1', "%Y-W%W-%w"), axis=1)
+
+
+
+    
+![png](output_183_1.png)
+    
+
 
 ## Creación Modelo Variable dependiente
 
@@ -4359,6 +4474,12 @@ print(f"\nLa diferencia entre los Valores R² del modelo: {r2_train- r2_test:.6f
 # print("\nComparación de los primeros 10 valores entre el valor predicho y el valor real:\n", comparison_df)
 ```
 
+    
+    Valor R² del modelo: 0.969116
+    
+    La diferencia entre los Valores R² del modelo: -0.021308
+
+
 ## Predicción Variable Dependiente
 
 
@@ -4373,6 +4494,9 @@ X_for_price = X_for_vol[Variables_avprice]
 # X_for_vol
 
 ```
+
+    3044324.417662722 3012443.205535852
+
 
 
 ```python
@@ -4427,3 +4551,17 @@ plt.legend()
 plt.show()
 
 ```
+
+    /tmp/ipykernel_789/291427227.py:12: SettingWithCopyWarning: 
+    A value is trying to be set on a copy of a slice from a DataFrame.
+    Try using .loc[row_indexer,col_indexer] = value instead
+    
+    See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy
+      X_to_plot.loc[:,'Date'] = X_to_plot.apply(lambda x: datetime.datetime.strptime(str(int(x['year'])) +'-W'+ str(int(x['n_week'])) + '-1', "%Y-W%W-%w"), axis=1)
+
+
+
+    
+![png](output_194_1.png)
+    
+
