Prova amb els NOTE

--- a/Avocados_readme/10.Avocados_del_diablo.md
+++ b/Avocados_readme/10.Avocados_del_diablo.md
@@ -225,16 +225,19 @@ Variables altamente correlacionadas con otras: ['Total Volume', 'Volume_Hass_S',
 ### Proporción por tipo de bolsa sobre Total Bags
     
 ![png](output_32_0.png)
-> [!NOTE] Respecto al tamaño de las bolsas, podemos ver que las bolsas pequeñas tienen una mayor venta que las grandes y especialmente las muy grandes.
+> [!NOTE]
+> Respecto al tamaño de las bolsas, podemos ver que las bolsas pequeñas tienen una mayor venta que las grandes y especialmente las muy grandes.
     
 ![png](output_33_0.png)
-> [!NOTE] .
+> [!NOTE] 
+> De igual manera que el calibre de aguacates vendidos no influyen el precio de venta, lo mismo ocurre con el tamaño de las bolsas.
 
 ```
 Variables altamente correlacionadas con otras: ['Small Bags', 'Large Bags']
 ```    
 ![png](output_34_0.png)
-> [!NOTE]    
+> [!NOTE] 
+> Caso de la mayor ciudad, donde observamos el mismo comportamiento.
 
 ```
 Variables altamente correlacionadas con otras: ['Small Bags', 'XLarge Bags']
@@ -245,7 +248,7 @@ Observaciones:
 * Estamos mostrado los de tipo convencional. Que son los grupos de puntos de la parte derecha ? TotalUS y Grandes Regions.
     
 ![png](output_36_0.png)
-> [!NOTE]
+> [!NOTE] 
 
 ![png](output_36_1.png)
 > [!NOTE]    
